--- a/css/estilos.css
+++ b/css/estilos.css
@@ -6,15 +6,34 @@ body{
     margin:0;
     padding: 0;
 }
+
+#cabecera {
+    background: #33a;
+    box-shadow: -0px 2px 20px 6px rgba(0,0,0,0.41);
+    color: white;
+    font-weight: bold;
+    margin-top: 0px;
+    margin: 0;
+    padding: 0.5em;
+}
+
+#cabecera #tagline {
+    padding:0 0 0 2em ;
+    font-weight: normal;
+    font-size: 0.8em;
+}
+
 #container{
     width: 70%;
-    padding: 1em;
+    /* padding: 1em; */
     text-align: left;
-    border: 1px solid #dddddd;
+    border: 1.5px solid #dddddd;
+    border-top: 0px;
     margin: 0 auto;
 
 }
 
 #container h1{
     font-size : 20px; 
+    padding-top: 20px;
 }
