--- a/css/estilos.css
+++ b/css/estilos.css
@@ -38,3 +38,14 @@ body{
     font-size : 20px; 
     padding-top: 20px;
 }
+footer{
+    background-color: #33a;
+    padding: 10px;
+    color: whitesmoke;
+    display: flex;
+    border-radius: 5px;
+    justify-content: center;
+    font-size: 20px;
+    box-shadow: -0px 2px 20px 6px rgba(0,0,0,0.41);
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
